<resources>
    <string name="app_name">Submission4kotlindicoding</string>

    <string name="teams">Teams</string>
    <string name="favorites">Favorite</string>
    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>
    <string name="versus">vs</string>
    <string name="event">Events</string>
    <string name="player">player</string>
    <string name="goal">Goal</string>
    <string name="shot">Shots</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="red_card">Red Card</string>
    <string name="lineup">Lineups</string>
    <string name="gk">Goal Keeper</string>
    <string name="df">Defenders</string>
    <string name="md">Midfenders</string>
    <string name="fw">Forward</string>
    <string name="subs">Subs</string>
</resources>
